chore: Finish all refactorings
