# src/routes/categories.routes.ts
@@ -1,9 +1,13 @@
 import { Router } from 'express';
 import multer from 'multer';
 
-import { createCategoryController } from '../modules/cars/useCases/CreateCategory';
-import { importCategoryController } from '../modules/cars/useCases/importCategory';
-import { listCategoriesController } from '../modules/cars/useCases/ListCategories';
+import { CreateCategoryController } from '../modules/cars/useCases/CreateCategory';
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory';
+import { ListCategoriesController } from '../modules/cars/useCases/ListCategories';
+
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
 const categoriesRoutes = Router();
 
@@ -11,16 +15,10 @@ const upload = multer({
   dest: './tmp',
 });
 
-categoriesRoutes.post('/', (req, res) => {
-  return createCategoryController.handle(req, res);
-});
+categoriesRoutes.post('/', createCategoryController.handle);
 
-categoriesRoutes.get('/', (req, res) => {
-  return listCategoriesController.handle(req, res);
-});
+categoriesRoutes.get('/', listCategoriesController.handle);
 
-categoriesRoutes.post('/import', upload.single('file'), (req, res) => {
-  importCategoryController.handle(req, res);
-});
+categoriesRoutes.post('/import', upload.single('file'), importCategoryController.handle);
 
 export { categoriesRoutes };
